--- a/app/app.json
+++ b/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Blank Template",
-    "slug": "app",
+    "slug": "app_v3",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
