--- a/app/package.json
+++ b/app/package.json
@@ -8,26 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.8.0",
-    "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/bottom-tabs": "^5.0.6",
-    "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/bottom-tabs": "^5.1.0",
+    "@react-navigation/material-bottom-tabs": "^5.1.0",
     "expo": "~36.0.0",
-    "link": "^0.1.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-dialog-input": "^1.0.7",
     "react-native-gesture-handler": "~1.5.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.1.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.1.1",
-    "react-navigation-drawer": "^2.3.4",
-    "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0",
-    "unlink": "0.0.2"
+    "react-navigation": "^4.2.2",
+    "react-navigation-drawer": "^2.4.2",
+    "react-navigation-stack": "^2.2.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
