--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.1.0",
+    "@react-navigation/drawer": "^5.1.0",
     "@react-navigation/material-bottom-tabs": "^5.1.0",
     "expo": "~36.0.0",
     "react": "~16.9.0",
